--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+ .navbar {
+ 	border-bottom-left-radius: 0px;
+ 	border-bottom-right-radius: 0px;
+ 	border-top-right-radius: 0px; 
+ 	border-top-left-radius: 0px;
+
+ }
